CLI working arduino