@@ -10,7 +10,9 @@ import java.io.*;
 import java.lang.reflect.Array;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
@@ -35,29 +37,44 @@ public class JavaParser {
   public static void main(String argv[]) {
     argv = new String[]{"Test/parsertest.txt"};
 
+    String inputFilePath = null;
+    String outputFilePath = null;
+    boolean verifyCompilation = false;
 
-
-    for (int i = 0; i < argv.length; i++) {
+    if (argv.length == 1) {
+      inputFilePath = argv[0];
+      outputFilePath = inputFilePath.substring(0, inputFilePath.lastIndexOf("."));
+    } else if (argv.length == 2) {
+      inputFilePath = argv[0];
+      outputFilePath = argv[1];
+    } else if (argv.length == 3 && argv[2].equals("--verify")) {
+      inputFilePath = argv[0];
+      outputFilePath = argv[1];
+      verifyCompilation = true;
+    } else {
+      System.out.println("Usage: rdbc.jar [path to roboduino file] [path to generated arduino file] [--verify]");
+    }
+    if (inputFilePath != null) {
       try {
         System.out.println("Scanning...");
-        Scanner s = new Scanner(new UnicodeEscapes(new FileReader(argv[i])));
-        System.out.println("Parsing [" + argv[i] + "]");
+        Scanner s = new Scanner(new UnicodeEscapes(new FileReader(inputFilePath)));
+        System.out.println("Parsing...");
         parser p = new parser(s);
         Symbol root = p.parse();
-        Program program = (Program)root.value;
+        Program program = (Program) root.value;
         System.out.println("Typechecking...");
         program.accept(new ASTvisitor());
         System.out.println("Generating code...");
         CodeGeneratorVisitor cgv = new CodeGeneratorVisitor();
         program.accept(cgv);
 
-        FileWriter fileWriter = new FileWriter("program.ino");
-        System.out.println("Writing to file...");
+        FileWriter fileWriter = new FileWriter(outputFilePath + ".ino");
+        System.out.println("Writing to file... " + outputFilePath);
         fileWriter.write(cgv.code.toString());
         fileWriter.close();
-        if(System.getProperty("os.name").startsWith("Windows")) {
+        if (System.getProperty("os.name").startsWith("Windows") && verifyCompilation) {
           System.out.println("Verifying storage...");
-          verify();
+          verify(outputFilePath);
         }
 
         System.out.println("Compilation succeeded");
@@ -67,7 +84,7 @@ public class JavaParser {
       }
     }
   }
-  public static void verify() throws RuntimeException, IOException, InterruptedException {
+  public static void verify(String outputFilePath) throws RuntimeException, IOException, InterruptedException {
     try {
 
       String value = WindowsReqistry.readRegistry("HKLM\\SOFTWARE\\Classes\\Arduino file\\shell\\open\\command", "");
@@ -79,13 +96,20 @@ public class JavaParser {
       path = path + "arduino_debug";
 
       //ProcessBuilder process = new ProcessBuilder("C:\\Program Files (x86)\\Arduino\\arduino_debug", "--verify", "program.ino");
-      ProcessBuilder process = new ProcessBuilder(path, "--verify", "program.ino");
-      process.redirectOutput(new File("OutputExe.txt"));
-      process.redirectError(new File("ErrorOutputExe.txt"));
-      process.redirectInput(new File("InputExe.txt"));
+      ProcessBuilder process = new ProcessBuilder(path, "--verify", outputFilePath + ".ino");
+      File temp = new File(System.getProperty("user.dir")+"\\ArduinoStorage.temp");
+      process.redirectOutput(temp);
+
+      Process pr = Runtime.getRuntime().exec("attrib +H " + System.getProperty("user.dir")+"\\ArduinoStorage.temp");
+      pr.waitFor();
+
       Process e = process.start();
+      BufferedReader in1 = new BufferedReader(new InputStreamReader(e.getErrorStream()));
+      while((in1.readLine()) != null){}
       e.waitFor();
-      String storage = Files.readString(Paths.get("OutputExe.txt"));
+
+      String storage = Files.readString(Paths.get("ArduinoStorage.temp"));
+      temp.delete();
       System.out.println(storage);
 
       String pattern1 = "(";
@@ -103,22 +127,21 @@ public class JavaParser {
 
         if (Integer.parseInt(percent.get(0)) > 100) {
           System.out.println("Error: Program storage exceeds the maximum limit");
-          PrintWriter pw = new PrintWriter("program.ino");
-          pw.close();
+
           throw new RuntimeException();
         }
         if (Integer.parseInt(percent.get(1)) > 100) {
           System.out.println("Error: Dynamic storage exceeds the maximum limit");
-          PrintWriter pw = new PrintWriter("program.ino");
-          pw.close();
+
           throw new RuntimeException();
         } else if (Integer.parseInt(percent.get(1)) >= 80) {
-          System.out.println("Warning: Dynamic storage exceeds 80 %, which can cause stability issues");
+          System.out.println("Warning: Dynamic storage exceeds 80%, which can cause stability issues");
         }
       }
     }
     catch (NullPointerException e){
       System.out.println("Arduino installation could not be found, unable to determine size");
+      e.printStackTrace();
     }
 
   }
